@@ -4,6 +4,7 @@
 <script type="text/javascript" src="javascript/guide_view.js"></script>
 <script type="text/javascript" src="languages/lang_eng.js"></script>
 <script type="text/javascript" src="javascript/channels.js"></script>
+<script type="text/javascript" src="config/custom.js"></script>
 <script type="text/javascript" src="javascript/main.js"></script>
 <script type="text/javascript">
 
