@@ -662,7 +662,7 @@ channelsnames[483]="Sky Nostalgie,Nostalgie";
 channels[483]="S19.2E-133-3-516";
 channelsnames[484]="Sky Sport 1,Sport1";
 channels[484]="S19.2E-133-4-221";
-channelsnames[485]="Sky Sport 2,Sport2";
+channelsnames[485]="LILLE - WOL";
 channels[485]="S19.2E-133-4-222";
 channelsnames[486]="N24 Austria";
 channels[486]="S19.2E-133-7-53";
@@ -702,6 +702,10 @@ channelsnames[512]="ServusTV Deutschland";
 channels[512]="S19.2E-1-1115-13110";
 channelsnames[513]="ServusTV Oesterreich";
 channels[513]="S19.2E-1-1115-13111";
+channelsnames[514]="DAF Neu";
+channels[514]="S19.2E-1-1003-13227";
+channelsnames[515]="Bibel TV HD";
+channels[515]="S19.2E-1-1003-13224";
 channelsnames[520]="SRF info";
 channels[520]="S13.0E-318-8500-911";
 channelsnames[521]="SRF 1";
@@ -3012,7 +3016,7 @@ channelsnames[4726]="BBC English (Europe)";
 channels[4726]="S13.0E-318-13000-14618";
 channelsnames[4727]="BBC English Mid-East";
 channels[4727]="S13.0E-318-13000-14619";
-channelsnames[4728]="PPV| Gala KSW29";
+channelsnames[4728]="Test4";
 channels[4728]="S13.0E-113-7900-10500";
 channelsnames[4729]="Polsat Food";
 channels[4729]="S13.0E-113-7900-10501";
@@ -3246,7 +3250,7 @@ channelsnames[6014]="BRAZZERS TV Europe";
 channels[6014]="S13.0E-318-12200-7461";
 channelsnames[6015]="PRIVATE TV";
 channels[6015]="S13.0E-318-13300-4960";
-channelsnames[6016]="FL TV";
+channelsnames[6016]="AD ALOULA HD OBSOLETE";
 channels[6016]="S13.0E-318-8900-2098";
 channelsnames[6017]="Venus";
 channels[6017]="S30.0W-83-105-502";
@@ -3364,68 +3368,70 @@ channelsnames[8026]="BBC Two";
 channels[8026]="T-8720-2212-27";
 channelsnames[8027]="TV Oost";
 channels[8027]="T-8720-2214-1104";
-channelsnames[8028]="TV Gelderland";
-channels[8028]="T-0-0-1104";
-channelsnames[8029]="ZDF";
-channels[8029]="T-8468-514-514";
-channelsnames[8030]="3sat";
-channels[8030]="T-8468-514-515";
-channelsnames[8031]="ZDFinfo";
-channels[8031]="T-8468-514-516";
-channelsnames[8032]="neo/KiKA";
-channels[8032]="T-8468-514-517";
-channelsnames[8033]="arte";
-channels[8033]="T-8468-6144-2";
+channelsnames[8028]="Ketnet/OP12";
+channels[8028]="T-8720-2244-46";
+channelsnames[8029]="TV Gelderland";
+channels[8029]="T-0-0-1104";
+channelsnames[8030]="ZDF";
+channels[8030]="T-8468-514-514";
+channelsnames[8031]="3sat";
+channels[8031]="T-8468-514-515";
+channelsnames[8032]="ZDFinfo";
+channels[8032]="T-8468-514-516";
+channelsnames[8033]="neo/KiKA";
+channels[8033]="T-8468-514-517";
 channelsnames[8034]="arte";
-channels[8034]="T-8468-14849-2";
-channelsnames[8035]="arte OBSOLETE";
-channels[8035]="T-8720-2214-2";
-channelsnames[8036]="PHOENIX";
-channels[8036]="T-8468-6144-3";
-channelsnames[8037]="PHOENIX OBSOLETE";
-channels[8037]="T-8720-2214-3";
-channelsnames[8038]="PHOENIX";
-channels[8038]="T-8468-14849-3";
-channelsnames[8039]="Einsfestival";
-channels[8039]="T-8468-6144-5";
-channelsnames[8040]="Einsfestival OBSOLETE";
-channels[8040]="T-8720-2214-5";
-channelsnames[8041]="Einsfestival";
-channels[8041]="T-8468-14849-5";
-channelsnames[8042]="Das Erste";
-channels[8042]="T-8468-6144-256";
-channelsnames[8043]="Das Erste OBSOLETE";
-channels[8043]="T-8720-2214-256";
-channelsnames[8044]="Das Erste";
-channels[8044]="T-8468-14849-256";
-channelsnames[8045]="hr-fernsehen";
-channels[8045]="T-0-0-65";
+channels[8034]="T-8468-6144-2";
+channelsnames[8035]="arte";
+channels[8035]="T-8468-14849-2";
+channelsnames[8036]="arte OBSOLETE";
+channels[8036]="T-8720-2214-2";
+channelsnames[8037]="PHOENIX";
+channels[8037]="T-8468-6144-3";
+channelsnames[8038]="PHOENIX OBSOLETE";
+channels[8038]="T-8720-2214-3";
+channelsnames[8039]="PHOENIX";
+channels[8039]="T-8468-14849-3";
+channelsnames[8040]="Einsfestival";
+channels[8040]="T-8468-6144-5";
+channelsnames[8041]="Einsfestival OBSOLETE";
+channels[8041]="T-8720-2214-5";
+channelsnames[8042]="Einsfestival";
+channels[8042]="T-8468-14849-5";
+channelsnames[8043]="Das Erste";
+channels[8043]="T-8468-6144-256";
+channelsnames[8044]="Das Erste OBSOLETE";
+channels[8044]="T-8720-2214-256";
+channelsnames[8045]="Das Erste";
+channels[8045]="T-8468-14849-256";
 channelsnames[8046]="hr-fernsehen";
-channels[8046]="T-8468-38912-65";
-channelsnames[8047]="MDR FERNSEHEN";
-channels[8047]="T-0-0-100";
+channels[8046]="T-0-0-65";
+channelsnames[8047]="hr-fernsehen";
+channels[8047]="T-8468-38912-65";
 channelsnames[8048]="MDR FERNSEHEN";
-channels[8048]="T-8468-38912-100";
-channelsnames[8049]="NDR FS NDS";
-channels[8049]="T-8468-38912-129";
+channels[8048]="T-0-0-100";
+channelsnames[8049]="MDR FERNSEHEN";
+channels[8049]="T-8468-38912-100";
 channelsnames[8050]="NDR FS NDS";
-channels[8050]="T-0-0-129";
-channelsnames[8051]="NDR FS HH*";
-channels[8051]="T-0-0-130";
+channels[8050]="T-8468-38912-129";
+channelsnames[8051]="NDR FS NDS";
+channels[8051]="T-0-0-129";
 channelsnames[8052]="NDR FS HH*";
-channels[8052]="T-8468-38912-130";
-channelsnames[8053]="NDR FS SH*";
-channels[8053]="T-8468-38912-131";
+channels[8052]="T-0-0-130";
+channelsnames[8053]="NDR FS HH*";
+channels[8053]="T-8468-38912-130";
 channelsnames[8054]="NDR FS SH*";
-channels[8054]="T-0-0-131";
-channelsnames[8055]="NDR FS MVP*";
-channels[8055]="T-0-0-132";
+channels[8054]="T-8468-38912-131";
+channelsnames[8055]="NDR FS SH*";
+channels[8055]="T-0-0-131";
 channelsnames[8056]="NDR FS MVP*";
-channels[8056]="T-8468-38912-132";
-channelsnames[8057]="WDR Köln";
-channels[8057]="T-0-0-262";
+channels[8056]="T-0-0-132";
+channelsnames[8057]="NDR FS MVP*";
+channels[8057]="T-8468-38912-132";
 channelsnames[8058]="WDR Köln";
-channels[8058]="T-8468-38912-262";
+channels[8058]="T-0-0-262";
+channelsnames[8059]="WDR Köln";
+channels[8059]="T-8468-38912-262";
 channelsnames[9001]="NPO Radio1";
 channels[9001]="S23.5E-3-3211-20860";
 channelsnames[9002]="NPO Radio2";
@@ -3566,11 +3572,6 @@ channelsnames[9522]="SkyRadio 101 FM";
 channels[9522]="T-8720-2211-116";
 channelsnames[9523]="Radio Veronica";
 channels[9523]="T-8720-2211-117";
-
-channelsnames[7001]="Beeldkrant";
-channels[7001]="T-8720-2211-117";
-ServerAdres[7]="FullURL";
-
 minChan[0] = 1;
 maxChan[0] = 954;
 baseChn[0] = 0;
@@ -3593,7 +3594,7 @@ minChan[6] = 6001;
 maxChan[6] = 6047;
 baseChn[6] = 6000;
 minChan[8] = 8001;
-maxChan[8] = 8058;
+maxChan[8] = 8059;
 baseChn[8] = 8000;
 minChan[9] = 9001;
 maxChan[9] = 9523;
@@ -3609,15 +3610,4 @@ defChan[6] = 6001; protChn[6] = 1;
 defChan[7] = 7000; protChn[7] = 0;
 defChan[8] = 8001; protChn[8] = 0;
 defChan[9] = 9051; protChn[9] = 0;
-Chan_Ver = "12/04/14 18:58:19" ;
-
-
-channelsnames[7000]="BVN Multicast";
-channels[7000]="udp://239.255.0.10:11111";
-ServerAdres[7]="FullURL";
-minChan[7] = 7000;
-maxChan[7] = 7000;
-baseChn[7] = 7000;
-
-
-
+Chan_Ver = "12/17/14 19:41:05" ;
